tests/paczka2/big_fuzzy/21903181.err
Error in line 24: fySM0m7g4 A816 65,5
Error in line 26: A282 A282 14,79
Error in line 18: A282 A816 96,3
Error in line 30: A282 A282 74,6
Error in line 28: InnTzKQQUR4 A282 20,0
Error in line 39: A282 A282 27,5
Error in line 27: R87BGK A816 4,1
Error in line 44: c9aY0 A54 50,4
Error in line 51: c9aY0 A816 69,5
Error in line 52: c9aY0 A282 85,9
Error in line 69: fySM0m7g4 S183 8,8
Error in line 76: R87BGK S?83 86,2
Error in line 79: YDOpBu3 S183 13,2
Error in line 61: LuwVF4 A816 32,4
Error in line 82: LuwVF4 A282 84,9
Error in line 90: InnTzKQQUR4 S183 11,6
Error in line 100: R87BGK S183 16,68
Error in line 101: A282 A816 66,7
Error in line 111: c9aY0 A816 11,89
Error in line 107: c9aY0 A282 1,8
Error in line 112: c9aY0 A816 7,5
Error in line 99: InnTzKQQUR4 A54 122,6
Error in line 103: A282 A282 10,0
Error in line 127: YDOpBu3 S183 268,2
Error in line 141: LuwVF4 S183 26,1
Error in line 132: A282 A816 99,6
Error in line 145: A282 A282 5,9
Error in line 144: LuwVF4 A282 60,4
Error in line 171: R87BGK A816 92,4
Error in line 175: R87BGK A282 90,8
Error in line 165: InnTzKQQUR4 A816 17,5
Error in line 187: c9aY0 A816 26,1
Error in line 189: R87BGK A282 29,6
Error in line 198: LuwVF4 A54 78,5
Error in line 212: fySM0m7g4 A816 -2,8
Error in line 210: fySM0m7g4 A816 60,6
Error in line 226: InnTzKQQUR4 A54 53,8
